--- a/README
+++ b/README
@@ -2,12 +2,7 @@ Collabedit IDE integration plugin
 
 This is a GreaseMonkey plugin to quickly integrate collabedit.com with your editor.
 
-In simple words you will be able to code as always, in your own environment, using ctrl+space, running the code, etc. while presenting your solution with collabedit. 
-
-Limitations:
-    1. When plugin is enabled, all the changes of your collaborators would be overwritten.
-    2. Local source files are not supported. You have to serve it with http. (This is to GreaseMonkey security reasons)
-
+In simple words: you will be able to present your solution on collabedit, coding in your own environment, using ctrl+space, executing the code, etc. 
 
 How to use it:
     1. Install GreaseMonkey plugin for firefox. Enable it.
@@ -17,7 +12,6 @@ How to use it:
     4. Setup your IDE to automatically save your source file every second.
     5. Go to collabedit.com site and find the plugins controls below the main textarea.
 
-
 Tips:
     1. The plugin might be helpful in facebook technical interview. 
     2. I strongly reccomend you to ask your interviewer for permission, before you use the plugin. 
@@ -26,7 +20,8 @@ Tips:
     4. Double check that the plugin works fine for you. Especially, it may stop working after collabedit software update.
 
 
-
-
+Limitations:
+    1. When the plugin is enabled, all the changes of your collaborators would be overwritten.
+    2. Local source files are not supported. You have to serve it with http. (This is to GreaseMonkey security reasons)
 
 
